Fixed bug with photo credit z-index

--- a/app/assets/styles/modules/_photo-cred.css
+++ b/app/assets/styles/modules/_photo-cred.css
@@ -1,5 +1,5 @@
 .photo-cred {
-	z-index: 5;
+	z-index: 0;
 	color: #fff;
 	font-weight: 250;
 	position: absolute;
